gestion des cas avec ou sans réservation et vans en cours de location sur le dashboard + ajout et design  d'un fallback

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "components/index";
 @import "components/footer";
 @import "components/card_dashboard";
+@import "components/dashboard_fallback_container";
 @import "components/address_autocomplete";
 @import "pages/van_show";
 @import "pages/index";
