--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,21 +1,35 @@
+<h1 class="dashboard-h1">Réservations</h1>
+
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-10 mx-auto">
-      <h1 class="title-dashboard">Vos réservations de vans</h1>
-      <ul class="list-group mb-3">
-        <% @bookings_as_visitor.each do |booking| %>
-          <%= render booking, booking: booking, booking_type: "visitor" %>
-        <% end %>
-      </ul>
-    </div>
+    <div class="col-xs-12 col-sm-8 mx-auto">
+        <ul class="list-group mb-3">
+          <% if @bookings_as_visitor.any? %>
+            <h3 class="title-dashboard">Vos réservations de vans</h3>
+            <% @bookings_as_visitor.each do |booking| %>
+              <%= render booking, booking: booking, booking_type: "visitor" %>
+            <% end %>
+          <% else %>
+            <div class="fallback-container">
+              <div class="fallback-container-infos col-4">
+                <p>Vous n'avez aucune réservation en cours. Découvrez notre offre de vans.</p>
+                <%= link_to "Découvrir", vans_path, class: "btn btn-flat" %>
+              </div>
+              <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741188996/jikun-li-Xeg4GZFc1IQ-unsplash_cgoixa.jpg" width="auto" height="auto" class="fallback-container-img">
+            </div>
+          <% end %>
+        </ul>
+      </div>
 
-    <div class="col-xs-12 col-sm-10 mt-5">
-      <h1 class="title-dashboard">Vos vans loués</h1>
-      <ul class="list-group mb-3">
-        <% @bookings_as_owner.each do |booking| %>
-          <%= render booking, booking: booking, booking_type: "owner" %>
-        <% end %>
-      </ul>
+      <div class="col-xs-12 col-sm-8 mt-5">
+        <ul class="list-group mb-3">
+          <% if @bookings_as_owner.any? %>
+            <h1 class="title-dashboard">Vos vans loués</h1>
+            <% @bookings_as_owner.each do |booking| %>
+              <%= render booking, booking: booking, booking_type: "owner" %>
+            <% end %>
+          <% end %>
+        </ul>
     </div>
   </div>
 </div>
