--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,6 @@
           <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="footer-copyright">
-          Ce footer a été réalisé avec <i class="fas fa-heart"></i> par l'équipe Spry
+          Ce footer a été réalisé avec <i class="fas fa-heart"></i> par l'équipe Spry®
         </div>
       </div>
