--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -7,7 +7,7 @@
         <% elsif @van.image_url.present? %>
           <img src="<%= @van.image_url %>"  class="van-img img-fluid rounded resize" alt="van">
         <% else %>
-          <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" class="van-img img-fluid rounded resize">
+          <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741190112/development/2yjwlody3oudx5hkk0f8vv05q2k8.jpg" class="van-img img-fluid rounded resize">
         <% end %>
           <p><strong>Carburant:</strong> <%= @van.fuel %></p>
           <p><strong>Prix:</strong> <%= @van.price %>€ par jour</p>
