--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-xs-12 col-sm-8 mx-auto">
         <ul class="list-group mb-3">
+        <% @bookings_as_visitor = [] %>
           <% if @bookings_as_visitor.any? %>
             <h2 class="title-dashboard">Vos réservations de vans</h2>
             <% @bookings_as_visitor.each do |booking| %>
@@ -19,11 +20,17 @@
         </ul>
       </div>
 
-    <div class="col-xs-12 col-sm-10 mt-5">
-      <h2 class="title-dashboard">Vos vans</h1>
+    <div class="col-xs-12 col-sm-8 mt-5">
+      <% @bookings_as_owner = [] %>
+      <% @available_vans = [] %>
+      <% if @bookings_as_owner.any? || @available_vans.any? %>
+        <h2 class="title-dashboard">Vos vans</h1>
+       <% end %>
       <ul class="list-group mb-3">
-        <% @bookings_as_owner.each do |booking| %>
+       <% if @bookings_as_owner.any? %>
+          <% @bookings_as_owner.each do |booking| %>
           <%= render booking, booking: booking, booking_type: "owner" %>
+          <% end %>
         <% end %>
         <% if @available_vans.any? %>
           <% @available_vans.each do |van| %>
