--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -34,7 +34,8 @@
             </div>
         </div>
       </div>
-  <div>
-    <%= link_to "Retour", vans_path, class: "btn btn-secondary" %>
   </div>
+    <div>
+      <%= link_to "Retour", vans_path, class: "btn btn-secondary" %>
+    </div>
 </div>
