--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -26,17 +26,20 @@
         <input type="text" value="<%= I18n.l(@booking.end_date, format: "%-d %B %Y", locale: :fr) %>" readonly class="form-control text-center mb-4">
         <p><strong>Statut de la réservation : </strong><%= @booking.status %></p>
         <% end %>
-          <div data-controller="toggle" class="mt-4 map-container">
-  <button class="btn btn-flat btn-map" data-action="click->toggle#fire"><span>Voir la carte</span>
-  <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741184289/icons8-carte-30_sx5vze.png" alt="icon-map">
-  </button>
+        <div data-controller="toggle" class="mt-4 map-container">
+          <button class="btn btn-flat btn-map" data-action="click->toggle#fire"><span>Voir la carte</span>
+          <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741184289/icons8-carte-30_sx5vze.png" alt="icon-map">
+          </button>
 
-    <div style="height: 200px" id="map-container" data-toggle-target="togglableElement"class="d-none"
-      data-controller="map"
-      data-map-markers-value="<%= @markers.to_json %>"
-      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-    </div>
-      </div>
+          <div style="height: 200px" id="map-container" data-toggle-target="togglableElement"class="d-none"
+            data-controller="map"
+            data-map-markers-value="<%= @markers.to_json %>"
+            data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+            data-map-show-controls-value="false"
+            data-map-show-popup-value="false"
+            data-map-zoom-map-value="false">
+          </div>
+        </div>
         </div>
       </div>
     </div>
